--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SplitPayUi</title>
+  <title>Splitpay</title>
   <base href="/">
   <!-- <meta name="google-signin-client_id"
     content="1003783467324-cv7nn44hcmqejd0m3vtv8q7jhv9bacsr.apps.googleusercontent.com"> -->
